# backend

./: .env  Cargo.toml  Sea.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250630_000001_create_user_and_role.rs  m20250630_000002_add_user_fields.rs
migrations/: 20251105_init.sql  script.sql
src/: main.rs
src/application/: mod.rs
src/domain/: mod.rs
src/domain/active_session/: active_session_entity.rs  mod.rs
src/domain/customer/: customer_entity.rs  mod.rs
src/domain/group/: group_entity.rs  group_service.rs  mod.rs
src/domain/identity/: mod.rs
src/domain/identity/entities/: role_entity.rst
src/domain/identity/repositories/: role_repository.rst  (+1 more)
src/domain/invoice/: invoice_entity.rs  invoice_service.rs  mod.rs
src/domain/invoice_details/: invoice_details_entity.rs  invoice_details_service.rs  mod.rs
src/domain/meal/: meal_entity.rs  meal_service.rs  mod.rs
src/domain/order/: mod.rs  order_customer_entity.rs  order_entity.rs
src/domain/order_details/: mod.rs  order_details_entity.rs
src/domain/product/: mod.rs  product_entity.rs  product_service.rs
src/domain/role/: mod.rs  role_entity.rs  role_service.rs
src/domain/stock/: mod.rs  stock_entity.rs
src/domain/supplier/: mod.rs  supplier_entity.rs  supplier_service.rs
src/domain/system_log/: mod.rs  system_log_entity.rs
src/domain/user/: mod.rs  user_entity.rs  user_service.rs
src/infrastructure/: mod.rs
src/interfaces/: database.rs  mod.rs
src/interfaces/dtos/: active_session_dto.rs  customer_dto.rs  group_dto.rs  invoice_details_dto.rs  invoice_dto.rs  meal_dto.rs  mod.rs  order_customer_dto.rs  order_details_dto.rs  order_dto.rs  product_dto.rs  response_dto.rs  role_dto.rs  stock_dto.rs  supplier_dto.rs  system_log_dto.rs  user_dto.rs
src/interfaces/rest/: invoice_controller.rs  invoice_details_controller.rs  meal_controller.rs  mod.rs  product_controller.rs  role_controller.rs  user_controller.rs
src/interfaces/swagger/: api_doc.rs
src/interfaces/websocket/: mod.rs
(+7 files in other folders)
