[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
actix = "0.13"
actix-cors = "0.6"
jsonwebtoken = "9"
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"