[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "./migration" }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
actix = "0.13"
actix-cors = "0.6"
jsonwebtoken = "9"
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"